--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 body {
     background: black;
     position: relative;
-    height: 100vh;
+    height: 120vh;
 }
 
-.star {
+.star-center {
     margin: 0;
     height: 5px;
     width: 5px;
     border-radius: 5px;
+    box-shadow: 0 0 1px 1px #555;
     background-color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transition-property: left, top;
-    transition-duration: 4s;
-    transition-timing-function: ease;
+    transform: translate3d(50vw, 50vh, 5px);
+    transition: transform 5s linear;
 }
+
+.star-move { 
+    transform: translate3d(-20vw, -20vh, 7.5px) scale(1.5);
+}
+
