--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 body {
-    background: black;
-    position: relative;
     height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+}
+
+.star-field {
+    background: black;
+    height: 100vh;
+    width: 100vw;
 }
 
 .star {
     margin: 0;
-    height: 5px;
-    width: 5px;
     border-radius: 5px;
     box-shadow: 0 0 1.5px 1.5px #555;
     background-color: white;
+    display: inline-block;
 }
 
 .star-center {
