--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     box-shadow: 0 0 1.5px 1.5px #555;
     background-color: white;
     display: inline-block;
+    transform-style: preserve-3d;
     transition: transform 7s linear;
 }
 
