--- a/style.css
+++ b/style.css
@@ -11,22 +11,8 @@ body {
     width: 100vw;
 }
 
-.star {
-    margin: 0;
-    border-radius: 5px;
-    box-shadow: 0 0 1.5px 1.5px #555;
-    background-color: white;
+.star { 
+    box-shadow: 0 0 1.5px 1.5px white;
     display: inline-block;
-    transform-style: preserve-3d;
-    transition: transform 7s linear;
+    opacity: 0.1;
 }
-
-.star-center {
-    transform: translate3d(50vw, 50vh, 5px);
-    
-}
-
-.star-move { 
-    transform: translate3d(-20vw, -20vh, 7.5px) scale(1.5);
-}
-
